fixes weird overflow

--- a/Implementation/frontend/src/app/sidebar/side-benchmark-select/side-benchmark-select.component.scss
+++ b/Implementation/frontend/src/app/sidebar/side-benchmark-select/side-benchmark-select.component.scss
@@ -1,5 +1,4 @@
 mat-card {
   font-size: 13pt;
-  margin-top: 1vh;
 }
 
